--- a/style.css
+++ b/style.css
@@ -35,6 +35,45 @@ section > h1 {
 }
 
 .flex {
+  display: flex;
   width: 80%;
   background-color: white;
+  padding: 1rem;
+  column-gap: 1rem;
+  border-radius: 0.5em;
+}
+
+.box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: black;
+  width: 5rem;
+  height: 5rem;
+  border-radius: 0.8rem;
+  background-color: teal;
+}
+
+.justify-content-flex-start {
+  justify-content: flex-start;
+}
+
+.justify-content-flex-end {
+  justify-content: flex-end;
+}
+
+.justify-content-center {
+  justify-content: center;
+}
+
+.justify-content-s-e {
+  justify-content: space-evenly;
+}
+
+.justify-content-s-b {
+  justify-content: space-between;
+}
+
+.justify-content-s-a {
+  justify-content: space-around;
 }
